--- a/package.json
+++ b/package.json
@@ -23,35 +23,27 @@
   },
   "homepage": "https://gitlab.com/ipeadata/ipeadata3#README",
   "dependencies": {
-    "autoprefixer": "^8.0.0",
     "axios": "^0.17.1",
-    "babel-eslint": "^8.2.1",
     "bootstrap": "^4.0.0",
-    "chart.js": "^2.7.2",
-    "exports-loader": "^0.7.0",
     "font-awesome": "^4.7.0",
-    "imports-loader": "^0.8.0",
-    "leaflet": "^1.3.1",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
-    "postcss-loader": "^2.1.1",
-    "precss": "^3.1.2",
     "query-string": "^5.0.1",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
     "riot": "^3.8.1",
     "riot-route": "^3.1.2",
-    "slug": "^0.9.1",
-    "tether": "^1.4.3"
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
   },
   "devDependencies": {
-    "amcharts3": "^3.21.12",
+    "autoprefixer": "^8.0.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "clean-webpack-plugin": "^0.1.18",
     "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -59,12 +51,11 @@
     "font-awesome-loader": "^1.0.2",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^4.1.0",
-    "jquery": "^3.3.1",
-    "node-sass": "^4.7.2",
-    "popper.js": "^1.12.9",
+    "node-sass": "^4.8.3",
+    "postcss-loader": "^2.1.1",
+    "precss": "^3.1.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
-    "transfer-webpack-plugin": "^0.1.4",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0"
   }
